Novos testes automatizados